@@ -1,3 +1,8 @@
+2015-01-21  Carl Hetherington  <cth@carlh.net>
+
+	* Fix differentiation between MXF-wrapped subtitles
+	and video/audio content.
+
 2015-01-20  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.0.35 released.
